pievienoju info lapu

--- a/template/main.html
+++ b/template/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet\style.css">
+    <link rel="stylesheet" href="../stylesheet/main.css">
     <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
                 
     <title>Vizitkarte</title>
@@ -14,9 +14,14 @@
         <h1>Kristaps Bērtulis</h1>
         <h3>Sex Bomba</p>
     </div>
-    <img src="images\PngItem_159891.png" alt="penguin_image">
+    <img src="../images/PngItem_159891.png" alt="penguin_image">
     <div class="header">
-        <button type="button1"> free RAM</button>
+        <a href="info.html">
+            <button class="info" type="button"> Info</button>
+        </a>
+        <a href="main.html">
+            <button class="kontakti" type="button"> Kontakti</button>
+        </a>
     </div>
 </body>
 </html>
